--- a/src/app/gallerytemplate/gallerytemplate.component.css
+++ b/src/app/gallerytemplate/gallerytemplate.component.css
@@ -9,3 +9,6 @@
     
   }
   
+  .img{
+    max-height: 8rem;
+  }
